<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="4dp"
    android:elevation="2dp"
    app:cardMaxElevation="3dp"
>


    <androidx.cardview.widget.CardView
        android:id="@+id/imageCardView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView"/>
    </androidx.cardview.widget.CardView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="101dp"
        >

        <TextView
            android:id="@+id/transInfoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/paidOrReceiver" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/transInfoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sampleDateTime" />

        <TextView
            android:id="@+id/balanceTextView"
            android:layout_toRightOf="@id/transInfoTextView"
            android:layout_marginStart="110dp"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sampleAmountText" />
    </RelativeLayout>


</androidx.cardview.widget.CardView>

</RelativeLayout>