<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActions.RegisterCard">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="760dp"
        android:background="@drawable/layout_gradient_background">


        <RelativeLayout
            android:id="@+id/relativeLayoutTransaction1"
            android:layout_width="match_parent"
            android:layout_height="150dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/layout_white_background"
                android:orientation="vertical">

                <!--                <androidx.cardview.widget.CardView-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="match_parent"-->
                <!--                    app:cardCornerRadius="4dp"-->
                <!--                    app:cardMaxElevation="4dp"-->
                <!--                    app:cardElevation="3dp"-->
                <!--                    android:layout_margin="20dp"/>-->

                <TextView
                    android:id="@+id/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:gravity="center_horizontal|center_vertical"
                    android:inputType="textPersonName"
                    android:text="@string/bankDetails"
                    android:textColor="@color/black"
                    android:textFontWeight="@integer/material_motion_duration_medium_2"
                    android:textSize="22dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayoutTransaction3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/relativeLayoutTransaction1"
            android:background="@drawable/layout_gradient_02"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="40dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/bankIDCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="3dp"
                    app:cardMaxElevation="4dp">

                    <EditText
                        android:id="@+id/bankid"
                        android:layout_width="320dp"
                        android:layout_height="40dp"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="Enter Bank ID"
                        android:inputType="textPersonName"
                        android:textColor="@color/black" />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardAccountNumberCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/bankIDCard"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="3dp"
                    app:cardMaxElevation="4dp">


                    <EditText
                        android:id="@+id/cardnumber"
                        android:layout_width="320dp"
                        android:layout_height="40dp"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/enterCardNumber"
                        android:inputType="number"
                        android:textColor="@color/black" />
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView

                    android:id="@+id/expiryDateCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cardAccountNumberCard"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="3dp"
                    app:cardMaxElevation="4dp">

                    <EditText
                        android:id="@+id/expirydate"
                        android:layout_width="320dp"
                        android:layout_height="40dp"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/enterExpiryDate"
                        android:inputType="date"
                        android:textColor="@color/black" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvvCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/expiryDateCard"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="3dp"
                    app:cardMaxElevation="4dp">

                    <EditText
                        android:id="@+id/cvv"
                        android:layout_width="320dp"
                        android:layout_height="40dp"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/enterCVV"
                        android:inputType="number"
                        android:textColor="@color/black" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cvvCard"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="20dp">

                    <Button
                        android:id="@+id/button"

                        android:layout_width="143dp"
                        android:layout_height="match_parent"
                        android:text="@string/submitButton" />
                </androidx.cardview.widget.CardView>

            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>