<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActions.FundTransfer">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="760dp"
        android:background="@drawable/layout_gradient_background">


        <ImageButton
            android:id="@+id/infoImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="350dp"
            android:src="@android:drawable/ic_menu_info_details"
            app:cardBackgroundColor="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"/>


        <RelativeLayout
            android:id="@+id/relativeLayoutTransaction1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/cardLayoutAccount"
                android:layout_width="331dp"
                android:layout_height="229dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/bankcard"
                    android:layout_width="300dp"
                    android:layout_height="180dp"
                    android:layout_centerVertical="true"
                    android:elevation="10dp"
                    app:cardBackgroundColor="#430E0E"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:id="@+id/linearLayoutTransaction1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/bankname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:text="Bank Name"
                            android:textColor="#E1E1E1"
                            android:textSize="20sp"></TextView>

                        <TextView
                            android:id="@+id/banktype"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/bankname"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="2dp"
                            android:text="Debit Card"
                            android:textColor="@color/white"
                            android:textSize="14sp"></TextView>

                        <ImageView
                            android:id="@+id/chip"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_below="@+id/banktype"
                            android:layout_marginStart="40dp"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/chip" />

                        <TextView
                            android:id="@+id/cardnumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/chip"
                            android:layout_gravity="center"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/demoAccountNumber"
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutHorizontal"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/cardLayoutAccount"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardElevation="0dp">

                    <ImageButton
                        android:id="@+id/imageButtonNEFT"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_corner"
                        android:scaleType="fitXY"
                        android:src="@drawable/neft"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="70dp"
                        android:gravity="center"
                        android:text="@string/neft"
                        android:textColor="@color/white" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardElevation="0dp">

                    <ImageButton
                        android:id="@+id/imageButtonRTGS"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_corner"
                        android:scaleType="fitXY"
                        android:src="@drawable/rtgs"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="75dp"
                        android:gravity="center"
                        android:text="@string/rtgs"
                        android:textColor="@color/white" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardElevation="0dp">

                    <ImageButton
                        android:id="@+id/imageButtonIMPS"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="30dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_corner"
                        android:scaleType="fitXY"
                        android:src="@drawable/imps"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="75dp"
                        android:gravity="center"
                        android:text="@string/imps"
                        android:textColor="@color/white" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayoutTransaction3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/relativeLayoutTransaction1"
            android:background="@drawable/layout_gradient_02"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="40dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/c1"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >


                    <EditText
                        android:gravity="center"
                        android:id="@+id/emailentry"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:hint="@string/enterReceivedEmail"
                        android:inputType="textEmailAddress" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/c2"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/c1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"  />

                <androidx.cardview.widget.CardView
                    android:id="@+id/c3"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/c2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >


                    <EditText
                        android:id="@+id/amountentry"
                        android:gravity="center"
                        android:layout_width="match_parent"

                        android:ems="10"
                        android:hint="@string/enterTheAmount"
                        android:layout_height="40dp"
                        android:background="@android:color/transparent"
                        android:inputType="number" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/c4"
                    android:layout_below="@+id/c3"
                    android:layout_margin="20dp"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/submitbtn"
                        android:layout_width="131dp"
                        android:layout_height="match_parent"
                        android:text="@string/submitButton" />
                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>